Set minimal width for the username in the password bubble on Mac.

BUG=648831

Review-Url: https://codereview.chromium.org/2354323003
Cr-Commit-Position: refs/heads/master@{#420393}

Former-commit-id: ea08f0cc6410d6a6fb0a813eca66aa4fdc36242b